[package]
edition = "2021"
name = "simd_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
harness = false
name = "min_bench"
